# bertiewooster.github.io

./: .gitignore  LICENSE  README.md  _config.yml  about.md  contact.md  index.md  main.py  nb_html  nb_md  nb_md.sh  pyproject.toml
_drafts/: 2022-03-20-survey-pipeline-1.md  2022-03-26-survey-pipeline-2.md  2022-03-26-survey-pipeline-3.md  2022-10-09-RDKit-find-highlight-maximum-common-substructure.html  ChEMBL post title ideas.txt
_includes/: feed.xml  head.html
_layouts/: default.html  post.html
_notebooks/: 2022-10-09-RDKit-find-and-highlight-the-maximum-common-substructure-between-molecules.ipynb  2022-10-09-RDKit-find-highlight-maximum-common-substructure.ipynb  2022-11-11-RDKit-Recap-decomposition-tree.ipynb  2022-12-12-DeepChem_lipophilicty_machine_learning.ipynb  2022-12-13-Chemistry-machine-learning-for-drug-discovery-with-DeepChem old.md  2022-12-13-Chemistry-machine-learning-for-drug-discovery-with-DeepChem run locally.ipynb  2022-12-13-Chemistry-machine-learning-for-drug-discovery-with-DeepChem.ipynb  2022-12-18-Visualizing-Nonbinary-Trees-Classification-of-Chemical-Isomers.ipynb  2022-12-25-RDKit-Find-Groups-Off-Common-Core.ipynb  2022-??-??-RDKit-Find-Groups-Off-Common-Core.ipynb  2022-??-??-RDKit-find-groups-off-core.ipynb  2022-??-??-Visualizing-nonbinary-trees.ipynb  2023-01-02-Mass-Spectrometry-Fragmentation-Tree.ipynb  2023-02-07-Are-the-Starting-Materials-for-Synthesizing-Your-Target-Molecules-Commercially-Available.ipynb  2023-02-??-async.ipynb  2023-03-10 old-Revisiting-a-Classic-Cheminformatics-Paper-The-Wiener-Index.ipynb  (+58 more)
assets/: main.scss
(+82 files in other folders)
