[project]
name = "bertiewooster-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "chembl-webresource-client>=0.10.9",
    "marimo>=0.18.4",
    "matplotlib>=3.10.8",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "sqlalchemy>=2.0.45",
]
